# github-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  install.sh  mcp.json  package.json  pyproject.toml  requirements.txt  run.sh  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/github_mcp_server/: __init__.py  __main__.py  auth.py  github_client.py  resources.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_auth.py
